Ajustes de posicionamiento de texto

--- a/Reto3_Lab2_HTMLyCSS/index.html
+++ b/Reto3_Lab2_HTMLyCSS/index.html
@@ -35,10 +35,13 @@
             float: left;
             padding: 15px;
             width: 30%;
+            height: 50px;
+            line-height: 52px;
+            text-align: center;
         }
         .menuItem:not(:last-child) {
             border-right: 1px solid white;
-            height: 36px;
+            height: 52px;
         }
         .bigFont{
             font-size: 35px;
