Ajuste radius pfp

--- a/Reto3_Lab2_HTMLyCSS/29706291/perfil.html
+++ b/Reto3_Lab2_HTMLyCSS/29706291/perfil.html
@@ -25,7 +25,7 @@
             float: inline-start;
             width: 210px;
             height: 375px;
-            border-top-left-radius: 25%;
+            border-top-left-radius: 4pc;
         }
         .DatosPerfil{
             float: inline-start;
