--- a/Reto3_Lab2_HTMLyCSS/29706291/perfil.html
+++ b/Reto3_Lab2_HTMLyCSS/29706291/perfil.html
@@ -5,63 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yarima Contreras</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
-    <style>
-        .Descripcion{
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            text-align: justify;
-            font-size: 15px;
-        }
-        h1, a{
-            color: #91116f;
-        }
-        a:visited{
-            color: red;
-        }
-        body{
-            float: inline-start;
-            justify-content: left;
-        }
-        img{
-            float: inline-start;
-            width: 210px;
-            height: 375px;
-            border-top-left-radius: 4pc;
-        }
-        .DatosPerfil{
-            float: inline-start;
-            width: 100%;
-            max-width: 800px;
-            padding: 20px;
-            height: 330px;
-            border: 3px solid #91116f;
-            box-shadow: 10px 10px 0px rgba(57, 7, 131, 0.3);
-            background: linear-gradient(to bottom right, #6593f5, #b88dff);
-        }
-        @media only screen and (max-width: 750px) {
-            h1{
-                font-size: 120%;
-            }
-            .text{
-                font-size: 70%;
-            }
-            img{
-                width: 30%;
-            }
-            .DatosPerfil{
-                width: auto;
-                max-width: 60%;
-            }
-            body{
-                display: inline;
-                float: inline-start;
-                width: 80%;
-                max-width: 700px;
-            }
-
-    </style>
+    <link href="/ATI-012024/Reto3_Lab2_HTMLyCSS/css/style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
-<body>
-    <img src="29706291.jpg" alt="Foto de Yarima">
+
+<body class="tarjetaPerfil">
+    <img class="pfp" src="29706291.jpg" alt="Foto de Yarima">
     <div class="DatosPerfil">
         <h1 class>Yarima Contreras Blanco</h1>
         <p class="Descripcion text"><i>
@@ -92,7 +40,7 @@
         </table>
         
         <p class="text">
-            Si necesitan comunicarse conmigo, me pueden escribir a: <a href="mailto:yarimacontreras.ucv@gmail.com">yarimacontreras.ucv@gmail.com</a> 
+            Si necesitan comunicarse conmigo, me pueden escribir a: <a class="email" href="mailto:yarimacontreras.ucv@gmail.com">yarimacontreras.ucv@gmail.com</a> 
         </p>
     </div>
 </body>
