--- a/Reto3_Lab2_HTMLyCSS/index.html
+++ b/Reto3_Lab2_HTMLyCSS/index.html
@@ -5,95 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Listado</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        nav{
-            color: aliceblue;
-            background-color: #87b1ef;
-            overflow: hidden;
-        }
-        nav ul{
-            list-style: none;
-            margin: auto;
-        }
-        nav ul li{
-            display: inline;
-            ;
-            align-items: center;
-            padding: 0px;
-        }
-        nav ul li a{
-            display: inline;
-            align-items: center;
-            color: aliceblue;
-            text-decoration: none;
-        }
-        .menuItem{
-            float: left;
-            padding: 15px;
-            width: 30%;
-            height: 50px;
-            line-height: 52px;
-            text-align: center;
-        }
-        .menuItem:not(:last-child) {
-            border-right: 1px solid white;
-            height: 52px;
-        }
-        .bigFont{
-            font-size: 35px;
-        }
-        input[type=text]{
-            border: #709ee4;
-            margin: 5px;
-            width: 200px;
-            height: 25px;
-        }
-        input[type=submit]{
-            color:#87b1ef;
-            border: #709ee4;
-            background-color: aliceblue;
-            margin: 5px;
-            height: 25px;
-        }
-        
-        .listStudents{
-            list-style: none;
-            justify-content: center;
-        }
-        .listItem{
-            float: left;
-            width: 19%;
-            margin: 1%;
-            justify-content: center;
-            text-align: center;
-            padding: 20px;
-            color: #87b1ef;
-            background-color: #f5f7f9;
-            box-shadow: 2px 2px 0px rgba(108, 108, 108, 0.3);
-        }
-        .listItem img{
-            width: 100px;
-            height: 150px;
-        }
-        section ul li a{
-            color: #87b1ef;
-            text-decoration: none;
-        }
-
-        footer{
-            clear: both;
-            text-align: center;
-            background-color: #87b1ef;
-            padding: 5px;
-        }
-    </style>
+    <link href="/ATI-012024/Reto3_Lab2_HTMLyCSS/css/style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
-<body>
 
+<body class="bodyIndex">
     <header>
         <nav>
             <ul class="menuList">
@@ -172,6 +87,5 @@
     <footer>
         <p> Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados </p>
     </footer>
-
 </body>
 </html>
