Configuración desde JavaScript

--- a/Proyecto_HTMLyCSS/index.html
+++ b/Proyecto_HTMLyCSS/index.html
@@ -6,6 +6,8 @@
     <title>Página Listado</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
     <link href="/ATI-012024/Proyecto_HTMLyCSS/css/style.css" rel="stylesheet" type="text/css" media="screen">
+    <link rel="json" href="reto5/conf/configES.json">
+    <script src="js/index.js"></script>
 </head>
 
 <body class="bodyIndex">
@@ -19,7 +21,7 @@
                         <span class="bigFont">2024-1</span>
                     </a>
                 </li>
-                <li class="menuItem"> Hola, <a href="29706291/perfil.html"> Yarima</a> </li>
+                <li class="menuItem"> Hola, <a href="perfil.html"> Yarima</a> </li>
                 <li class="menuItem">
                     <form class="menuForm">
                         <input type="text" placeholder=" Nombre...">
@@ -32,61 +34,6 @@
 
     <section>
         <ul class="listStudents">
-            <li class="listItem saludo">
-                <picture class="pfpList">
-                    <source media="(max-width:480px)" srcset="29706291/29706291Pequena.jpg">
-                    <source media="(min-width:481px)" srcset="29706291/29706291Pequena.jpg">
-                    <source media="(min-width:769px)" srcset="29706291/29706291Grande.jpg">
-                    <source media="(min-width:1025px)" srcset="29706291/29706291Grande.jpg">
-                    <img class="pfpList" src="29706291/29706291Grande.jpg" alt="Foto de Yarima">
-                </picture>
-                <br>
-                <a href="29706291/perfil.html">Yarima Contreras Blanco</a>
-            </li>
-            <li class="listItem">
-                <img src="dummy6/dummy.jpg">
-                <br> Juan Antonio Pérez
-            </li>
-            <li class="listItem">
-                <img src="dummy3/dummy.jpg">
-                <br> Maritza Rodríguez
-            </li>
-            <li class="listItem">
-                <img src="dummy1/dummy.jpg">
-                <br> Emilia Casado
-            </li>
-            <li class="listItem">
-                <img src="dummy4/dummy.jpg">
-                <br> Enrique Colina
-            </li>
-            <li class="listItem">
-                <img src="dummy2/dummy.jpg">
-                <br> María Elena Pinto
-            </li>
-            <li class="listItem">
-                <img src="dummy5/dummy.jpg">
-                <br> Ronald Gutiérrez
-            </li>
-            <li class="listItem">
-                <img src="dummy6/dummy.jpg">
-                <br> Juan Antonio Pérez
-            </li>
-            <li class="listItem">
-                <img src="dummy3/dummy.jpg">
-                <br> Maritza Rodríguez
-            </li>
-            <li class="listItem">
-                <img src="dummy1/dummy.jpg">
-                <br> Emilia Casado
-            </li>
-            <li class="listItem">
-                <img src="dummy4/dummy.jpg">
-                <br> Enrique Colina
-            </li>
-            <li class="listItem">
-                <img src="dummy2/dummy.jpg">
-                <br> María Elena Pinto
-            </li> 
         </ul>
     </section>
 
