--- a/Proyecto_HTMLyCSS/perfil.html
+++ b/Proyecto_HTMLyCSS/perfil.html
@@ -6,8 +6,11 @@
     <title>Yarima Contreras</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
     <link href="/ATI-012024/Proyecto_HTMLyCSS/css/style.css" rel="stylesheet" type="text/css" media="screen">
+    <link rel="json" href="reto5/conf/configES.json">
+    <script src="js/index.js"></script>
 </head>
 
+<!--
 <body class="tarjetaPerfil">
     <picture class="pfp">
         <source media="(max-width:480px)" srcset="29706291Pequena.jpg">
@@ -50,4 +53,5 @@
         </p>
     </div>
 </body>
+-->
 </html>
