Cambio de lenguaje según atributo - Parte 1

--- a/Proyecto_HTMLyCSS/index.html
+++ b/Proyecto_HTMLyCSS/index.html
@@ -13,19 +13,19 @@
 <body class="bodyIndex">
     <header>
         <nav>
-            <ul class="menuList">
+            <ul id="list" class="menuList">
                 <li class="menuItem">
-                    <a href="index.html"> 
+                    <a id="sitio" href="index.html"> 
                         <span class="bigFont"> ATI </span>
                         <span>[UCV]</span>
                         <span class="bigFont">2024-1</span>
                     </a>
                 </li>
-                <li class="menuItem"> Hola, <a href="perfil.html"> Yarima</a> </li>
+                <li id="saludo" class="menuItem"> Hola, <a href="perfil.html?ci=29706291"> Yarima</a> </li>
                 <li class="menuItem">
                     <form class="menuForm">
-                        <input type="text" placeholder=" Nombre...">
-                        <input type="submit" value="Buscar">
+                        <input id="nombre" type="text" placeholder=" Nombre...">
+                        <input id="buscar" type="submit" value="Buscar">
                     </form>
                 </li>
             </ul>
@@ -38,7 +38,7 @@
     </section>
 
     <footer>
-        <p> Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados </p>
+        <p id="copyRight"> Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
