Cambio de lenguaje según atributo

--- a/Proyecto_HTMLyCSS/perfil.html
+++ b/Proyecto_HTMLyCSS/perfil.html
@@ -21,7 +21,7 @@
         <table class="text"></table>
         
         <p id="email" class="text">
-            Si necesitan comunicarse conmigo, me pueden escribir a: <a id="perfilEmail"></a> 
+            <a id="perfilEmail" href="mailto:"> </a> 
         </p>
     </div>
 </body>
