--- a/Proyecto_HTMLyCSS/29706291/perfil.html
+++ b/Proyecto_HTMLyCSS/29706291/perfil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yarima Contreras</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
-    <link href="/ATI-012024/Proyecto_HTMLyCSS/css/style.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="../css/style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body class="tarjetaPerfil">
